# damask

./: .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  erd.md  prd.md  sample_karyawan.csv  sample_nasabah.csv
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v3.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.0-MILESTONE-AUDIT.md  v4.0-REQUIREMENTS.md  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: db.py  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: admin.py  auth.py  jobs.py  mask.py  preview.py
backend/app/core/: config.py  limiter.py  logging.py
backend/app/models/: job.py  user.py
backend/app/services/: auth.py  detector.py  masker.py  parser.py
backend/app/tests/: conftest.py  test_admin.py  test_auth.py  test_input_hardening.py  test_invite.py  test_jobs.py  test_mask_zip.py  test_masker.py  test_rate_limits.py  test_reversion.py  test_revert_endpoint.py  test_role_auth.py  test_security_headers.py
backend/config/: regex_rules.json
docs/: API-SPEC.md  ARCHITECTURE.md  DEPLOYMENT-PROD.md  DEPLOYMENT.md
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
nginx/: nginx.conf
(+133 files in other folders)
